MODIFY   Guards and actions now are stored as expressions rather than strings. MODIFY   Some refactoring of EFA compilers. ADD   DNF converter separated out of EFA compiler, and unit tests added. ADD   Four EFA compiler test cases.